crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__week__single__range_named.snap
---
source: crates/tools/cron/src/tests/unit/week.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Nom(
                    "SUN-SAT",
                    Tag,
                ),
                Nom(
                    "SUN-SAT",
                    Alt,
                ),
                Nom(
                    "SUN-SAT",
                    Alt,
                ),
                Nom(
                    "SUN-SAT",
                    Alt,
                ),
            ],
        },
    ),
)
