crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__week__single__range_named_periodic.snap
---
source: crates/tools/cron/src/tests/unit/week.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Nom(
                    "SUN-SAT/2",
                    Tag,
                ),
                Nom(
                    "SUN-SAT/2",
                    Alt,
                ),
                Nom(
                    "SUN-SAT/2",
                    Alt,
                ),
                Nom(
                    "SUN-SAT/2",
                    Alt,
                ),
            ],
        },
    ),
)
