crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__week__single__range_named_reverse.snap
---
source: crates/tools/cron/src/tests/unit/week.rs
expression: result
---
Err(
    Error(
        Error {
            inner: [
                Nom(
                    "SAT-SUN",
                    Tag,
                ),
                Nom(
                    "SAT-SUN",
                    Alt,
                ),
                Nom(
                    "SAT-SUN",
                    Alt,
                ),
                Nom(
                    "SAT-SUN",
                    Alt,
                ),
            ],
        },
    ),
)
