crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__week__single__specifier_3.snap
---
source: crates/tools/cron/src/tests/unit/week.rs
expression: result
---
Ok(
    (
        "",
        MonthRule {
            kinds: [
                MonthKind {
                    range: (
                        March,
                        March,
                    ),
                    periodic: MonthPeriodic(
                        1,
                    ),
                },
            ],
        },
    ),
)
